--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <!-- //exe 1 -->
  <div id="btns">
-   <button id="btn" onclick="alert('good')"> click me to go</button>
-   <button id="btn1" onclick="alert('bad')"> click me to pause</button>
+   <button id="btn" onclick="alert('good bro')"> click me to go</button>
+   <button id="btn1" onclick="alert('bad bro')"> click me to pause</button>
  </div>
 <!-- //exe 2 -->
   <h1>Bookmarks</h1>
