--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- //exe 1 -->
  <div id="btns">
    <button id="btn" onclick="alert('good bro')"> click me to go</button>
-   <button id="btn1" onclick="alert('bad bro')"> click me to pause</button>
+   <button id="btn1" onclick="alert('not bad bro')"> click me to pause</button>
  </div>
 <!-- //exe 2 -->
   <h1>Bookmarks</h1>
